Fixed ctasection buttons in app download that is not clickable because of the z-index of the svg circle pattern below it

--- a/stylesheets/layout/_ctasection.scss
+++ b/stylesheets/layout/_ctasection.scss
@@ -36,6 +36,8 @@
 
         @include abstracts.adjust-for(abstracts.$tablets) {
             max-width: 28.5625rem;
+            position: relative;
+            z-index: 999;
         }
 
         @include abstracts.adjust-for(abstracts.$desktop) {
